<resources>
    <string name="app_name">Ecommerce</string>
    <string name="sales_item">Sales</string>
    <string name="main_text">Главная</string>
    <string name="about_text">Про нас</string>
    <string name="contacts_text">Контакты</string>
    <string name="courses">Courses</string>
    <string name="app_text">App</string>
    <string name="course_description">Программа обучения Джава – рассчитана
на новичков в данной сфере.
\n\n
За программу вы изучите построение
графических приложений под ПК,
разработку веб сайтов на основе Java
Spring Boot, изучите построение
полноценных Андроид приложений
и отлично изучите сам язык Джава!</string>
</resources>